--- a/final_project/src/MainNav.css
+++ b/final_project/src/MainNav.css
@@ -6,12 +6,14 @@
   text-align: center;
 
 }
-.items {
-  max-width: 150px;
-  padding-right: 10px;
-  padding-left: 10px;
+.Main-item {
+  padding-right: 20px;
+  padding-left: 20px;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
 }
 .menu {
+  width: 100%;
   display: flex;
   list-style-type: none;
   justify-content: space-around;
