--- a/final_project/src/MainNav.css
+++ b/final_project/src/MainNav.css
@@ -6,11 +6,16 @@
   text-align: center;
 
 }
+.Navbar-main a :hover{
+    text-decoration: none;
+
+}
 .Main-item {
   padding-right: 20px;
   padding-left: 20px;
   border-left: 1px solid black;
   border-right: 1px solid black;
+  transition: 0.4s;
 }
 .menu {
   width: 100%;
