added alt tags to images, changed router to load all routes from index file inside views, fixed className error in routes

--- a/final_project/src/TopNav.css
+++ b/final_project/src/TopNav.css
@@ -3,7 +3,7 @@ body{
     margin: auto;
 }
 .container{
-    width: 90vw;
+    width: 95%;
     margin-left: 20px;
 }
 
@@ -19,11 +19,8 @@ body{
   padding-left: 10px;
   border: 1px solid black;
 }
+
 .Top-menu {
   display: flex;
 }
-.float { 
-  margin-top: -30px;
-  display: flex;
-  float: right;
-}
+
