--- a/final_project/src/MainNav.css
+++ b/final_project/src/MainNav.css
@@ -6,20 +6,29 @@
   text-align: center;
 
 }
-.Navbar-main a :hover{
-    text-decoration: none;
 
-}
-.Main-item {
+
+.Main-item  {
+  display: flex;
+  height: 75px;
   padding-right: 20px;
   padding-left: 20px;
   border-left: 1px solid black;
   border-right: 1px solid black;
-  transition: 0.4s;
+  
 }
-.menu {
-  width: 100%;
+
+.menu {  
   display: flex;
-  list-style-type: none;
-  justify-content: space-around;
+  
 }
+.menu-class-active{
+  display: flex;
+  height: 75px;
+  padding-right: 20px;
+  padding-left: 20px;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+}
+
+
