--- a/final_project/src/TopNav.css
+++ b/final_project/src/TopNav.css
@@ -1,7 +1,12 @@
 body{
     font-family: 'Open Sans Condensed', sans-serif;
     margin: auto;
+    padding-left: 20px;
+    text-align: justify;
 }
+
+
+
 .container{
     width: 95%;
     margin-left: 20px;
@@ -17,7 +22,8 @@ body{
   height: 20px;
   padding-right: 10px;
   padding-left: 10px;
-  border: 1px solid black;
+  text-decoration: none;
+  /* border: 1px solid black; */
 }
 
 .Top-menu {
