--- a/src/TopNav.css
+++ b/src/TopNav.css
@@ -5,27 +5,32 @@ body{
     text-align: justify;
 }
 
-
-
 .container{
     width: 95%;
     margin-left: 20px;
 }
 
 .Navbar-top {
-  
-  height: 40px;
-  padding-bottom: 10px;
+    height: 40px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ddd;
 }
+
 .items {
-  display: flex;
-  height: 20px;
-  padding-right: 10px;
-  padding-left: 10px;
-  text-decoration: none;
-  /* border: 1px solid black; */
+    display: flex;
+    height: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
+    text-decoration: none;
+    color: #333;
+    transition: color 0.3s ease;
+}
+
+.items:hover {
+    color: #007bff;
 }
 
 .Top-menu {
-  display: flex;
+    display: flex;
+    gap: 10px;
 }
