--- a/src/App.css
+++ b/src/App.css
@@ -598,7 +598,7 @@ body {
   display: grid;
   grid-template-columns: 2fr 1fr;
   gap: 5rem;
-  align-items: start;
+  align-items: stretch;
   margin-bottom: 5rem;
 }
 
